force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <description>Objeto que armazena os preços dos materias provenientes via carga de arquivo do SAP (materiais como Simcard, Aparelhos).</description>
    <label>Preço</label>
    <nameField>
        <displayFormat>Price-{0000000000}</displayFormat>
        <label>Price Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preço</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>