force-app/main/default/objects/Price__c/fields/CodeUsage__c.field-meta.xml
<CustomField>
    <fullName>CodeUsage__c</fullName>
    <description>Armazena o valor da coluna Código de utilização do arquivo SAP_NFO_PRECO.txt</description>
    <label>Código de Utilização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>