force-app/main/default/objects/Price__c/fields/DistributionChannel__c.field-meta.xml
<CustomField>
    <fullName>DistributionChannel__c</fullName>
    <description>Armazena o valor da coluna Canal de Distribuição do arquivo SAP_NFO_PRECO.txt</description>
    <label>Canal de Distribuição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>