force-app/main/default/objects/Price__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <description>Armazena o valor presente na coluna Material do arquivo SAP_NFO_PRECO.txt</description>
    <label>Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>