force-app/main/default/objects/Price__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Armazena o valor da coluna Preço do arquivo SAP_NFO_PRECO.txt</description>
    <label>Preço</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>