force-app/main/default/objects/Price__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <description>Armazena o valor da coluna Org. Vendas do arquivo SAP_NFO_PRECO.txt</description>
    <label>Org Vendas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>