force-app/main/default/objects/Price__c/fields/TeleSaleChannel__c.field-meta.xml
<CustomField>
    <fullName>TeleSaleChannel__c</fullName>
    <description>Campo presente no arquivo de preço carregado pelo SAP para registrar a qual canal televendas está associado o registro de preço.</description>
    <label>Canal Televendas</label>
    <length>20</length>
    <type>Text</type>
</CustomField>